Fixing an overflow issue in the cheatsheet

--- a/css/main.css
+++ b/css/main.css
@@ -274,6 +274,11 @@ blockquote {
     padding: 6px 0;
 }
 
+    .vectors.overflow .utf {
+        overflow-x: hidden;
+        white-space: nowrap;
+    }
+
     .utf.long {
         width: 33%;
     }
